# Stellaris-Hackathon

./: .gitignore  Readme.md
App/: app.py  graph_engine.py  test_engine.py
Spectra-Backend/: Dockerfile  main.py  requirements.txt
Spectra-Frontend/: background.js  content.js  manifest.json
Team-Shivam/SheShield/: pubspec.yaml
Team-Shivam/SheShield/lib/: main.dart
graphvision/: README.md  pyproject.toml
graphvision/graphvision/: __init__.py  extractor.py
notebooks/: Combine.ipynb  Dot_line.ipynb  FigureQA.ipynb  FigureQA_2.ipynb  STEM_Sight_Dot_Line.ipynb  STEM_Sight_Horizontal.ipynb  STEM_Sight_Line.ipynb  STEM_Sight_PlotQA_Preprocessing.ipynb  STEM_Sight_VBar_Training.ipynb  Test.ipynb  Training.ipynb
submissions/Horizon_KIRO/: README.md  WORKFLOW_GUIDE.md  requirements.txt  run_jarvis.py
submissions/Horizon_KIRO/agent_memory/: context.json  execution_history.json  plans.json
submissions/Horizon_KIRO/graph/: __init__.py  jarvis_graph.py  server.py
submissions/Horizon_KIRO/ui/: app.py  chat_card.py
submissions/OrbitX_Equifund/: README.md
submissions/TeamAurva_Aurva/: BUILD_SUMMARY.md  Makefile  QUICKSTART.md  README.md  go.mod  go.sum  schema.sql
submissions/TheDavidProtocol_Equis/: README.MD
submissions/Unfazed_VITALS/: Readme.md
submissions/XPOINTERS_FINPILOT/: Readme.md
submissions/team7_airpay/: README.md
the_fumblers/: README.md
the_fumblers/heimdall/: .env.example  .gitignore  api.py  db.py  flake.nix  node.py  requirements.txt  start.sh  test.py  test_orchaestrator.py  test_webhook.py
the_fumblers/heimdall/app/: auth.py  (+6 more)
(+66 files in other folders)
